Version 5.2
- UI Improvements for CLeverest and bug fixes