@@ -8,11 +8,11 @@ import com.vaadin.flow.component.button.Button;
 import com.vaadin.flow.component.button.ButtonVariant;
 import com.vaadin.flow.component.html.Div;
 import com.vaadin.flow.component.html.Hr;
-import com.vaadin.flow.component.html.Image;
 import com.vaadin.flow.component.html.Span;
 import com.vaadin.flow.component.icon.VaadinIcon;
 import com.vaadin.flow.component.notification.Notification;
 import com.vaadin.flow.component.notification.NotificationVariant;
+import com.vaadin.flow.component.orderedlayout.HorizontalLayout;
 import com.vaadin.flow.component.orderedlayout.VerticalLayout;
 import com.vaadin.flow.component.textfield.TextField;
 import com.vaadin.flow.shared.Registration;
@@ -23,7 +23,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Consumer;
-import org.apache.commons.lang3.StringUtils;
 import org.rsinitsyn.quiz.model.QuizQuestionModel;
 import org.rsinitsyn.quiz.service.CleverestBroadcastService;
 import org.rsinitsyn.quiz.service.CleverestGameState;
@@ -33,19 +32,19 @@ import org.rsinitsyn.quiz.utils.StaticValuesHolder;
 
 public class CleverestGamePlayBoardComponent extends VerticalLayout {
 
-    private final String gameId;
-    private final CleverestBroadcastService broadcastService;
-    private final boolean isAdmin;
+    private String gameId;
+    private CleverestBroadcastService broadcastService;
+    private boolean isAdmin;
 
     private Div personalScoreContainer = new Div();
     private VerticalLayout categoriesLayout = new VerticalLayout();
     private VerticalLayout usersScoreLayout = new VerticalLayout();
-    private VerticalLayout questionLayout = new VerticalLayout();
+    private Div questionContainer = new Div();
     private VerticalLayout answersLayout = new VerticalLayout();
 
     private List<Registration> subs = new ArrayList<>();
 
-    public CleverestGamePlayBoardComponent(String gameId, CleverestBroadcastService broadcastService, boolean isAdmin) {
+    public void setProperties(String gameId, CleverestBroadcastService broadcastService, boolean isAdmin) {
         System.out.println("Init gameId: " + gameId);
         this.gameId = gameId;
         this.broadcastService = broadcastService;
@@ -60,18 +59,19 @@ public class CleverestGamePlayBoardComponent extends VerticalLayout {
             add(categoriesLayout);
         }
 
-        add(questionLayout, answersLayout);
+        add(questionContainer, answersLayout);
     }
 
     private void renderRoundRules(int roundNumber, String rulesText) {
-        Span rules = new Span(rulesText);
+        Div rules = new Div();
+        rules.setText(rulesText);
         rules.addClassNames(LumoUtility.FontSize.XXXLARGE,
                 LumoUtility.FontWeight.SEMIBOLD,
                 LumoUtility.TextAlignment.CENTER);
-        rules.setWidthFull();
+        rules.setWidth("25em");
         CleverestComponents.openDialog(
                 rules,
-                "Новый раунд",
+                "Раунд " + roundNumber,
                 () -> {
                     if (roundNumber == 3) {
                         broadcastService.sendRenderCategoriesEvent(gameId, null, null);
@@ -128,40 +128,20 @@ public class CleverestGamePlayBoardComponent extends VerticalLayout {
     }
 
     private void renderQuestionLayout(QuizQuestionModel questionModel, int roundNumber) {
-        questionLayout.removeAll();
-        questionLayout.setSpacing(false);
-        questionLayout.setPadding(false);
-        questionLayout.setDefaultHorizontalComponentAlignment(Alignment.CENTER);
+        questionContainer.removeAll();
+        questionContainer.setWidthFull();
 
         List<String> questionClasses = isAdmin
                 ? List.of(LumoUtility.FontSize.XXXLARGE, LumoUtility.FontWeight.SEMIBOLD)
                 : List.of(LumoUtility.FontSize.XXLARGE, LumoUtility.FontWeight.LIGHT);
 
-        if (StringUtils.isNotEmpty(questionModel.getPhotoFilename())) {
-            Image image = new Image();
-            image.setSrc(QuizUtils.createStreamResourceForPhoto(questionModel.getPhotoFilename()));
-            image.setMaxHeight(isAdmin ? "25em" : "15em");
-            questionLayout.add(image);
-        }
+        String imageHeight = isAdmin ? "25em" : "15em";
 
-        Span categorySpan = new Span(questionModel.getCategoryName());
-        categorySpan.addClassNames(LumoUtility.FontWeight.SEMIBOLD, LumoUtility.FontSize.SMALL);
-        questionLayout.add(categorySpan);
-
-        Span textContent = CleverestComponents.questionTextSpan(
-                questionModel.getText(),
-                questionClasses.toArray(new String[]{}));
-        questionLayout.add(textContent);
-
-        if (StringUtils.isNotEmpty(questionModel.getAudioFilename())) {
-            Button playAudioButton = new Button("Слушать");
-            playAudioButton.addThemeVariants(ButtonVariant.LUMO_CONTRAST, ButtonVariant.LUMO_PRIMARY);
-            playAudioButton.setIcon(VaadinIcon.PLAY_CIRCLE.create());
-            playAudioButton.addClickListener(event -> {
-                AudioUtils.playSoundAsync(questionModel.getAudioFilename());
-            });
-            questionLayout.add(playAudioButton);
-        }
+        questionContainer.add(CleverestComponents.questionLayout(
+                questionModel,
+                questionClasses,
+                imageHeight
+        ));
     }
 
     private void renderCategoriesTable(CleverestGameState.UserGameState userToAnswer, Map<String, List<QuizQuestionModel>> data) {
@@ -169,7 +149,6 @@ public class CleverestGamePlayBoardComponent extends VerticalLayout {
         categoriesLayout.addClassNames(LumoUtility.FontSize.XXXLARGE, LumoUtility.FontWeight.LIGHT);
         categoriesLayout.setAlignItems(Alignment.CENTER);
         categoriesLayout.setDefaultHorizontalComponentAlignment(Alignment.CENTER);
-        categoriesLayout.setSpacing(true);
 
         categoriesLayout.add(new Span(new Span("Отвечает: "),
                 CleverestComponents.userNameSpan(
@@ -177,28 +156,36 @@ public class CleverestGamePlayBoardComponent extends VerticalLayout {
                         userToAnswer.getColor())));
 
         data.forEach((category, questions) -> {
-            Button btn = new Button(category + " (" + questions.size() + ")");
-            btn.setWidthFull();
-            btn.addClickListener(event -> {
-                QuizQuestionModel question = questions.stream().findFirst().orElseThrow();
+            Button openQuestionBtn = CleverestComponents.primaryButton(
+                    category + " (" + questions.size() + ")",
+                    event -> {
+                        QuizQuestionModel question = questions.stream().findFirst().orElseThrow();
+                        // TODO KASTIL
+                        broadcastService.getState(gameId).refreshQuestionRenderTime();
+                        broadcastService.getState(gameId).submitAnswer(userToAnswer.getUsername(), "");
 
-                // TODO KASTIL
-                broadcastService.getState(gameId).refreshQuestionRenderTime();
-                broadcastService.getState(gameId).submitAnswer(userToAnswer.getUsername(), "");
-
-                CleverestComponents.openDialog(new Span(question.getText()), "Вопрос", () -> {
-                    showCorrectAnswer(question,
-                            Collections.singletonList(userToAnswer),
-                            false,
-                            true,
-                            uName -> {
-                                broadcastService.getState(gameId).getUsers().get(uName).increaseScore();
-                                broadcastService.sendUpdatePersonalScoreEvent();
-                            },
-                            () -> broadcastService.sendRenderCategoriesEvent(gameId, category, question));
-                });
-            });
-            categoriesLayout.add(btn);
+                        VerticalLayout questionLayout = CleverestComponents.questionLayout(question,
+                                List.of(LumoUtility.FontSize.XXXLARGE, LumoUtility.FontWeight.SEMIBOLD),
+                                "20em"
+                        );
+                        CleverestComponents.openDialog(
+                                questionLayout,
+                                "Вопрос",
+                                () -> {
+                                    showCorrectAnswer(question,
+                                            Collections.singletonList(userToAnswer),
+                                            false,
+                                            true,
+                                            uName -> {
+                                                broadcastService.getState(gameId).getUsers().get(uName).increaseScore();
+                                                broadcastService.sendUpdatePersonalScoreEvent();
+                                            },
+                                            () -> broadcastService.sendRenderCategoriesEvent(gameId, category, question));
+                                });
+                    });
+            openQuestionBtn.setWidthFull();
+            openQuestionBtn.addClassNames(LumoUtility.FontSize.XXXLARGE);
+            categoriesLayout.add(openQuestionBtn);
         });
     }
 
@@ -216,15 +203,36 @@ public class CleverestGamePlayBoardComponent extends VerticalLayout {
 
     private void showUsersScore(QuizQuestionModel question, boolean roundOver, Runnable onCloseAction) {
         usersScoreLayout.removeAll();
-        broadcastService.getState(gameId).getSortedByScoreUsers().forEach((username, userGameState) -> {
-            usersScoreLayout.add(CleverestComponents.userScore(username,
+        Map<String, CleverestGameState.UserGameState> users =
+                broadcastService.getState(gameId).getSortedByScoreUsers();
+        users.forEach((username, userGameState) -> {
+            HorizontalLayout row = new HorizontalLayout();
+
+            Span positionSpan = new Span();
+            positionSpan.addClassNames(LumoUtility.FontSize.XXXLARGE,
+                    LumoUtility.FontWeight.SEMIBOLD,
+                    LumoUtility.Border.RIGHT,
+                    LumoUtility.BorderColor.CONTRAST);
+            if (userGameState.getLastPosition() == 1) {
+                positionSpan.add(VaadinIcon.ACADEMY_CAP.create());
+            } else if (userGameState.getLastPosition() == users.size()) {
+                positionSpan.add(VaadinIcon.GLASS.create());
+            } else {
+                positionSpan.setText(String.valueOf(userGameState.getLastPosition() + "."));
+            }
+            row.add(positionSpan);
+
+            row.add(CleverestComponents.userScore(username,
                     userGameState.getColor(),
                     userGameState.getScore(),
                     LumoUtility.FontSize.XXXLARGE));
+
+            usersScoreLayout.add(row);
+            usersScoreLayout.add(new Hr());
         });
         CleverestComponents.openDialog(
                 usersScoreLayout,
-                "",
+                "Таблица результатов",
                 () -> {
                     broadcastService.updateHistoryAndSendEvent(gameId, question);
                     if (roundOver) {
@@ -246,26 +254,37 @@ public class CleverestGamePlayBoardComponent extends VerticalLayout {
         answers.setSpacing(true);
         answers.setDefaultHorizontalComponentAlignment(Alignment.START);
         answers.setAlignItems(Alignment.CENTER);
+        answers.addClassNames(LumoUtility.FontSize.XXXLARGE);
 
         answers.add(CleverestComponents.correctAnswerSpan(question,
-                LumoUtility.FontSize.XXLARGE,
+                LumoUtility.FontSize.XXXLARGE,
                 LumoUtility.FontWeight.SEMIBOLD));
+        answers.add(new Hr());
+
         users.forEach(userGameState -> {
+            HorizontalLayout row = new HorizontalLayout();
+            row.setDefaultVerticalComponentAlignment(Alignment.CENTER);
+
+            if (!appendApproveButton) {
+                row.add(userGameState.isLastWasCorrect()
+                        ? CleverestComponents.doneIcon()
+                        : CleverestComponents.cancelIcon());
+            }
+
             Span userAnswer = CleverestComponents
                     .userAnswer(userGameState.getUsername(),
                             userGameState.getColor(),
                             userGameState.getLastAnswerText(),
                             userGameState.isLastWasCorrect(),
                             LumoUtility.FontSize.XXXLARGE);
-            if (!appendApproveButton) {
-                answers.add(userAnswer);
-            } else {
+            row.add(userAnswer);
+            if (appendApproveButton) {
                 Button approveButton = CleverestComponents.approveButton(
                         () -> leftApproveAction.accept(userGameState.getUsername()),
-                        ButtonVariant.LUMO_PRIMARY,
                         ButtonVariant.LUMO_SUCCESS);
-                answers.add(new Span(userAnswer, approveButton));
+                row.add(approveButton);
             }
+            answers.add(row);
             answers.add(new Hr());
         });
 
@@ -273,6 +292,7 @@ public class CleverestGamePlayBoardComponent extends VerticalLayout {
                 answers,
                 "Ответы",
                 () -> {
+                    broadcastService.getState(gameId).updateUserPositions();
                     showUsersScore(question, roundOver, onCloseAction);
                     broadcastService.sendUpdatePersonalScoreEvent();
                 });
@@ -332,17 +352,22 @@ public class CleverestGamePlayBoardComponent extends VerticalLayout {
 
         subs.add(broadcastService.subscribe(CleverestBroadcastService.RenderCategoriesEvent.class, event -> {
             QuizUtils.runActionInUi(attachEvent.getUI().getUI(), () -> {
-                questionLayout.removeAll();
+                questionContainer.removeAll();
                 answersLayout.removeAll();
                 if (isAdmin) {
                     System.out.println(event.getClass().getName() + " - " + QuizUtils.getLoggedUser());
                     renderCategoriesTable(event.getUserToAnswer(), event.getData());
                 } else {
-                    // TODO STYLES
                     if (QuizUtils.getLoggedUser().equals(event.getUserToAnswer().getUsername())) {
-                        questionLayout.add(new Span("Выберайте категорию!!!"));
+                        questionContainer.add(CleverestComponents.userWaitSpan(
+                                "Время отвечать!",
+                                LumoUtility.TextColor.PRIMARY
+                        ));
                     } else {
-                        questionLayout.add(new Span("Внимание на экран..."));
+                        questionContainer.add(CleverestComponents.userWaitSpan(
+                                "Внимание на экран!",
+                                LumoUtility.TextColor.SECONDARY
+                        ));
                     }
                 }
             });
